回答部分作成

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ and open the template in the editor.
             <tr>
                 <td></td>
                 <td></td>
-                <td><input type="button" id="b_start" value="スタート"></td>
+                <td><input type="button" id="b_start" value="スタート"><input type="button" id="b_solve" value="回答"></td>
             </tr>
             </table>
         </div>
@@ -44,6 +44,16 @@ and open the template in the editor.
             <div class="mb10">
                 <div class="label">あなたのデータ</div>
                 <table id="your_data"></table>
+            </div>
+            
+            </div>
+        <div id="game_answer" class="mb20">
+            <div class="label">回答</div>
+            <div class="mb10">
+                <input id="answer_data" type="text">
+            </div>
+            <div class="mb10">
+                <input id="b_solve" type="button" value="答える">
             </div>
         </div>
             
