--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@ and open the template in the editor.
                 <td></td>
             </tr>
             <tr>
-                <td>ゲームデータ</td>
-                <td><textarea id="game_data" rows="4" cols="60" ></textarea></td>
+                <td>参加者</td>
+                <td><input id="player_names" size="60" type="text"></td>
                 <td></td>
             </tr>
             <tr>
@@ -31,7 +31,7 @@ and open the template in the editor.
             <tr>
                 <td></td>
                 <td></td>
-                <td><input type="button" id="b_start" value="スタート"><input type="button" id="b_solve" value="回答"></td>
+                <td><input type="button" id="b_start" value="スタート"></td>
             </tr>
             </table>
         </div>
@@ -50,7 +50,7 @@ and open the template in the editor.
         <div id="game_answer" class="mb20">
             <div class="label">回答</div>
             <div class="mb10">
-                <input id="answer_data" type="text">
+                <input id="answer_data" size="60" type="text">
             </div>
             <div class="mb10">
                 <input id="b_solve" type="button" value="答える">
